Actually fix spacing

--- a/app/assets/stylesheets/partials/_layout.scss
+++ b/app/assets/stylesheets/partials/_layout.scss
@@ -106,6 +106,6 @@ ul.options li {
   }
 }
 
-.hero {
-  padding-bottom: 150px;
+.content {
+  padding-top: 100px;
 }
